# docs/swagger.json
@@ -275,6 +275,11 @@
         },
         "/product": {
             "get": {
+                "security": [
+                    {
+                        "apiKey": []
+                    }
+                ],
                 "description": "Retrieve a paginated list of all products",
                 "tags": [
                     "Products"
@@ -314,6 +319,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "apiKey": []
+                    }
+                ],
                 "description": "Add a new product to the inventory",
                 "tags": [
                     "Products"
@@ -350,6 +360,11 @@
         },
         "/product/{id}": {
             "get": {
+                "security": [
+                    {
+                        "apiKey": []
+                    }
+                ],
                 "description": "Retrieve product details by product ID",
                 "tags": [
                     "Products"
@@ -389,6 +404,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "apiKey": []
+                    }
+                ],
                 "description": "Update an existing product's details by ID",
                 "tags": [
                     "Products"
@@ -432,6 +452,11 @@
         },
         "/products/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "apiKey": []
+                    }
+                ],
                 "description": "Delete a specific product by ID",
                 "produces": [
                     "application/json"
@@ -476,6 +501,11 @@
         },
         "/products/{id}/image": {
             "put": {
+                "security": [
+                    {
+                        "apiKey": []
+                    }
+                ],
                 "description": "Upload and update the image of a specific product by ID",
                 "consumes": [
                     "multipart/form-data"
@@ -530,6 +560,11 @@
         },
         "/products/{id}/price": {
             "put": {
+                "security": [
+                    {
+                        "apiKey": []
+                    }
+                ],
                 "description": "Update the price of a specific product by ID",
                 "consumes": [
                     "application/json"
@@ -691,7 +726,7 @@
     },
     "securityDefinitions": {
         "apiKey": {
-            "description": "Type \"Bearer\" followed by a space and JWT token. Please add it in the format \"Bearer {AccessToken}\" to authorize your requests.",
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
